<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CustomLauncher</string>
    <string name="global_thumb_2_label">智慧政务</string>
    <string name="global_thumb_1_label">直播电视</string>
    <string name="global_thumb_3_label">物业服务</string>
    <string name="categore_app_1_label">影视点播</string>
    <string name="categore_app_2_label">智慧社区</string>
    <string name="categore_app_3_label">智能家居</string>
    <string name="categore_app_4_label">应用市场</string>
    <string name="categore_app_5_label">更多应用</string>
    <string name="categore_app_6_label">本地播放</string>
    <string name="categore_app_7_label">系统设置</string>
    <string name="ad_text_1">智能家居，你来想象我来实现... 智能家居，你来想象我来实现... 智能家居，你来你来想象我来实现... 智能家居，你来想象我来实现... 智能家居，你来你来想象我来实现... 智能家居，你来想象我来实现... 智能家居，你来想象我来实现... 智能家居，你来想象我来实现... 智能家居，你来想象我来实现...... 智能家居，你来想象我来实现... 智能家居，你来想象我来实现... 智能家居，你来想象我来实现...</string>
    <string name="ad_text_2">智能社区，为你带来智能的自然之家...</string>
    <string name="time">8:20</string>
    <string name="temperature">青岛</string>
    <string name="date_time_today">今天</string>
    <string name="date_time_yesterday">昨天</string>
    <string name="date_time_hr">小时</string>
    <string name="date_time_hrs">小时</string>
    <string name="date_time_min">分钟</string>
    <string name="date_time_mins">分钟</string>
    <string name="date_time_sec">秒</string>
    <string name="date_time_section">期</string>
    <string name="date_thounsand">%1$s万</string>
    <string name="date_less_than_thounsand">%1$s</string>
    <string name="date_time_format_time_short">H:mm</string>
    <string name="date_time_format_time_short_12">h:mm</string>
    <string name="date_time_format_time_am_pm">h:mm a</string>
    <string name="date_time_format_am_pm">a</string>
    <string name="date_time_format_date_short_full">MM-dd-yyyy</string>
    <string name="date_time_format_month_day">MMM d</string>
    <string name="date_time_format_month_year">MMM yyyy</string>
    <string name="date_time_format_date_long">MMM dd, yyyy</string>
    <string name="date_time_format_year">yyyy</string>
    <string name="date_time_format_day_of_week">EEEE</string>
    <string name="date_time_format_duration">mm:ss</string>
    <string name="date_time_format_day_of_week_month_day">EEE, MMM d</string>

    <!-- weather -->
    <string name="temp_degree">℃</string>
    <string name="qing">晴</string>
    <string name="duoyun">多云</string>
    <string name="dafeng">大风</string>
    <string name="ying">阴</string>
    <string name="zhenyu">阵雨</string>
    <string name="leizhenyu">雷阵雨</string>
    <string name="binbao_leizhenyu">冰雹</string>
    <string name="yujiaxue">雨夹雪</string>
    <string name="xiaoyu">小雨</string>
    <string name="zhongyu">中雨</string>
    <string name="dayu">大雨</string>
    <string name="dongyu">冻雨</string>
    <string name="baoyu">暴雨</string>
    <string name="dabaoyu">大暴雨</string>
    <string name="te_dabaoyu">特大暴雨</string>
    <string name="xiaoxue">小雪</string>
    <string name="xue">雪</string>
    <string name="zhongxue">中雪</string>
    <string name="daxue">大雪</string>
    <string name="baoxue">暴雪</string>
    <string name="shachengbao">沙尘暴</string>
    <string name="qiang_shachengbao">强沙尘暴</string>
    <string name="wu">雾</string>
    <string name="fuchen">浮尘</string>
    <string name="yangsha">扬沙</string>
    <string name="mai">霾</string>
    <string name="zhenxue">阵雪</string>

    <!-- city -->
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="string_sheng">省</string>
    <string name="string_shi">市</string>
    <string name="string_qu">区</string>
    <string name="string_xian">县</string>
    <string name="string_sha">沙</string>
    <string name="city_config">天气城市设置</string>
    <string name="default_city">青岛</string>
    <string name="current_city">当前城市是:</string>
    <string name="change_city">,请输入新的城市：</string>
    <string name="city_weather_error">无法获取</string>
    <string name="select_app">请选择要替换的应用</string>
    <string name="apps_title">应用中心</string>
    <string name="media_title">影视专区</string>
    <string name="game_title">游戏专区</string>
    <string name="lontai_title">智慧社区</string>
    <string name="house_title">智能家居</string>
    <string name="media_first_name">本地播放</string>
    <string name="alert">功能不完善，敬请期待!</string>
    <string name="order">立即订购</string>

    <string-array name="scenario_array">
        <item>智能控制客户端</item>
        <item>智能窗帘</item>
        <item>电能管理</item>
        <item>智能灯光</item>
        <item>智能影音</item>
    </string-array>

    <string name="duplicate_alert">该应用已经在桌面,请选择其他应用!</string>
    <string name="can_not_replace">该应用不可被替换!</string>
    <string name="feature_menu_0">按OK键进入，按菜单键替换当前应用.</string>
    <string name="feature_menu_1">按OK键进入.</string>
    <string name="app_no_fund">服务暂未上线，敬请期待</string>
    <string name="app_is_downloading">正在下载应用应用程序</string>
    <string name="app_background_download">应用程序将在后台下载,请稍后</string>
    <string name="update">应用更新</string>
    <string name="tempurter_unit"><![CDATA[℃]]></string>
    <!-- Device info -->
    <string name="custom_about_device">关于设备</string>

    <!-- Recovery from USB -->
    <string name="recovery_package">系统恢复/升级</string>
    <string name="recovery_package_des">使用外部的升级包，来恢复和升级您的系统。</string>
    <string name="net_set">网络设置</string>
    <string name="display_set">显示设置</string>
    <string name="about_set">关于我们</string>
    <string name="about_us">青岛龙泰天翔通信科技有限公司是创业板上市公司300183青岛东软载波科技股份有限公司控股（51%）子公司，注册资本3700万元。公司定位于智慧社区、智慧家居综合运营商，主营产品包括：家庭和中小企业智慧网关设备、以智慧家居为核心的智慧社区多媒体运营服务系统等。是中国联通中国电信、中国广电的资深战略合作伙伴，自2007年起连续入围中国联通的EPON设备集中采购。拥有“ISO9000、ISO14000、OHSAS18000管理体系认证证书”、“高新技术企业证书”、“软件企业认定证书”、“通信信息系统集成证书”。\n\n青岛龙泰天翔通信科技有限公司 （www.luntech.com）</string>
    <string name="general_set">通用设置</string>
    <string name="qr_set">多屏互动二维码</string>
    <string name="qr_scan">请用手机或者PAD扫描以上二维码下载安装多屏互动客户端.</string>
    <string name="update_set">系统升级</string>
    <string name="common_info">基本信息</string>
    <string name="more_set">更多设置</string>
    <string name="title_activity_main">开机设置导航</string>
    <string name="previous">上一步</string>
    <string name="next">下一步</string>
    <string name="agree">同意</string>

    <!-- Tutorial -->
    <string name="tutorial_title">遥控器</string>
    <string name="done">确定</string>


    <!-- Languages -->
    <string name="languages_title">语言设置</string>
    <string name="languages_descr"> 请选择语言</string>
    <string name="languages_tip">您也可以在“系统设置”里对本项进行设置</string>
    <string name="str_curr_lang">您当前语言为</string>
    <string name="str_change_lang_to">Change to</string>

    <!-- Network -->
    <string name="network_title">网络设置</string>
    <string name="network_descr">联网后，您可以观看网络视频、下载应用，享受更多服务！</string>
    <string name="network_tip">您也可以后续在“系统设置”中进行网络设置。</string>
    <string name="str_wifi">WIFI:</string>
    <string name="str_wired">有线网络：</string>
    <string name="str_configure_wifi">配置WIFI</string>
    <string name="str_configure_wired">配置网络</string>
    <string name="str_not_connected">未连接</string>
    <string name="str_connected">已连接</string>
    <string name="str_not_detected">未检测到网络设备</string>
    <string name="str_needs_configuration">需要配置</string>
    <string name="switch_to_wifi">切换到无线网络</string>
    <string name="switch_to_wired">切换到有线网络</string>

    <!-- Location -->
    <string name="location_title">区域设置</string>
    <string name="location_descr">设置区域方便您享受与本地相关的服务。</string>
    <string name="location_tip">您也可以后续在“系统设置”中进行区域设置。</string>
    <string name="str_curr_loc">您当前的区域为</string>
    <string name="str_change_loc">更改区域</string>
    <string name="default_location">北京</string>
    <string name="china">中国</string>

    <!-- Channels -->
    <string name="channels_title">搜台设置</string>
    <string name="channels_descr">精彩节目将马上为您呈现。</string>
    <string name="channels_tip">您也可以后续在设置菜单中进行搜台设置。</string>
    <string name="str_tv_type_digital_dvbc">有线数字电视</string>
    <string name="str_tv_type_digital_dtmb">地面数字电视</string>
    <string name="str_tv_type_analog">模拟电视</string>
    <string name="str_scan_status_scanning">搜索&#8230;</string>
    <string name="str_scan_status_complete">搜索完成</string>
    <string name="str_scan_status_cancelled">取消搜索</string>
    <string name="str_scan_status_not_scanned">尚未搜索</string>
    <string name="str_start_scan">开始进行搜索</string>
    <string name="str_cancel_scan">取消搜索</string>
    <string name="str_scan_again">再次搜索</string>
    <string name="str_scan_mode_select_hint">请选择通道搜台</string>


    <!-- Live TV Input Source -->
    <string name="settings_system_about_tv">关于电视</string>
    <string name="settings_system_about_tv_name">本机型号</string>
    <string name="settings_system_about_model_number">产品型号</string>
    <string name="settings_system_about_model_name">产品名称</string>
    <string name="settings_system_about_serial_number">序列号</string>
    <string name="settings_system_about_android_version">Android 版本</string>
    <string name="settings_system_about_baseband_version">固件版本</string>
    <string name="settings_system_about_kernel_version">内核版本</string>
    <string name="product_version">产品型号 :</string>
    <string name="software_version">软件版本 :</string>
    <string name="local_update_label">本地升级</string>
    <string name="net_update_label">网络升级</string>
    <string name="settings_system_about_build_number">版本号</string>
    <string name="settings_system_mac_address">MAC 地址 :</string>
    <string name="settings_system_about_mac_address">有线网卡 MAC 地址</string>
    <string name="settings_system_about_wifi_mac_address">Wi-Fi 网卡 MAC 地址</string>
    <string name="settings_system_about_wifi_not_enabled">Wi-Fi 未启用</string>
    <string name="settings_system_about_preparing">正在读取..</string>
    <string name="settings_system_about_unavailiable">无可用信息</string>
    <string name="select_alert">请选择要使用电视桌面</string>
    <string name="no_permission">没有权限</string>
    <string name="no_feature">功能暂未开发...</string>
    <string name="reboot_alert">需要重启应用修改才能生效，是否重启应用?</string>
    <string name="current_theme">已在当前主题</string>


    <string-array name="general_item">
        <item>屏保设置</item>
        <item>修改默认桌面</item>
        <item>选择桌面</item>
        <item>更换主题</item>
        <item>选择城市</item>
        <item>恢复默认设置</item>
    </string-array>
    <string-array name="screensaver_array">
        <item>关闭</item>
        <item>5分钟</item>
        <item>10分钟</item>
        <item>15分钟</item>
    </string-array>

    <string-array name="theme_array">
        <item>IPTV</item>
        <item>Q1S</item>
    </string-array>
    <string name="app_version">IPTV</string>
    <string name="no_update">已经是最新版本</string>
</resources>