<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="60px"
        android:gravity="center|left"
        android:padding="10px"
        android:singleLine="true"
        android:text="@string/select_app"
        android:textColor="@color/white"
        android:textSize="@dimen/global_text_size_middle"
        android:textStyle="bold"
        android:visibility="visible" />

    <GridView
        android:id="@+id/select_apps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginTop="10dp"
        android:alwaysDrawnWithCache="true"
        android:columnWidth="@dimen/global_category_layout_wiith"
        android:horizontalSpacing="20dp"
        android:listSelector="@drawable/focus_selector"
        android:numColumns="4"
        android:scrollbars="none"
        android:stretchMode="columnWidth"
        android:verticalSpacing="10dp"
         />

    <ImageView
        android:id="@+id/devider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/select_apps"
        android:layout_marginTop="10px"
        android:paddingLeft="15px"
        android:paddingRight="15px"
        android:src="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60px"
        android:layout_below="@+id/devider2"
        android:weightSum="2"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/ok"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/focus_selector"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="@dimen/global_text_size_small" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/focus_selector"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/global_text_size_small" >
        </Button>
    </LinearLayout>

</RelativeLayout>