<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_gravity="center"
              android:gravity="center"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/local_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/local_update_button"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/net_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:background="@drawable/net_update_button"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:text="@string/product_version"
                android:textColor="@color/custom_white"
                android:textSize="@dimen/custom_content_bottom_size"/>

            <TextView
                android:id="@+id/product_version_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:gravity="center|left"
                android:textColor="@color/custom_white"
                android:textSize="@dimen/custom_content_bottom_size"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:text="@string/software_version"
                android:textColor="@color/custom_white"
                android:textSize="@dimen/custom_content_bottom_size"/>

            <TextView
                android:id="@+id/soft_version_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:gravity="center|left"
                android:textColor="@color/custom_white"
                android:textSize="@dimen/custom_content_bottom_size"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:text="@string/settings_system_mac_address"
                android:textColor="@color/custom_white"
                android:textSize="@dimen/custom_content_bottom_size"/>

            <TextView
                android:id="@+id/mac_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:gravity="center|left"
                android:textColor="@color/custom_white"
                android:textSize="@dimen/custom_content_bottom_size"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>